--- a/.github/workflows/pullrequest-opened.yml
+++ b/.github/workflows/pullrequest-opened.yml
@@ -13,8 +13,9 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
+          cache: "pip"
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r ./scripts/asana_integration/requirements.txt
+          pip install asana
       - run: python3 ./scripts/asana_integration/main.py pullrequest-opened --assignee-id {{ github.event.pull_request.assignee.id }} --pr-number {{ github.event.pull_request.number }} --pr-url {{ github.event.pull_request.html_url }} --pr-title {{ github.event.pull_request.title}}
