--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.1.0-rc01"
+compose-destinations = "1.9.50"
 org-jetbrains-kotlin = "1.8.22"
 core-ktx = "1.11.0-beta02"
 junit-jupiter = "5.8.2"
@@ -7,7 +8,6 @@ androidx-lifecycle = "2.6.1"
 activity-compose = "1.7.2"
 compose-bom = "2023.06.01"
 kotlin-serialization = "1.5.1"
-navigation = "2.7.0-beta02"
 hilt = "2.46.1"
 androidx-hilt = "1.0.0"
 accompanist = "0.31.5-beta"
@@ -21,6 +21,8 @@ kotlinx-coroutines = "1.7.2"
 turbine = "1.0.0"
 
 [libraries]
+compose-destinations = { module = "io.github.raamcosta.compose-destinations:animations-core", version.ref = "compose-destinations" }
+compose-destinations-ksp = { module = "io.github.raamcosta.compose-destinations:ksp", version.ref = "compose-destinations" }
 core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "core-ktx" }
 junit-jupiter = { module = "org.junit.jupiter:junit-jupiter", version.ref = "junit-jupiter" }
 lifecycle-runtime-compose = { group = "androidx.lifecycle", name = "lifecycle-runtime-compose", version.ref = "androidx-lifecycle" }
@@ -37,7 +39,6 @@ material3 = { group = "androidx.compose.material3", name = "material3", version 
 kotlin-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlin-serialization" }
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-test = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
-navigation = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation" }
 hilt-navigation = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidx-hilt" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
 hilt-android-compiler = { group = "com.google.dagger", name = "hilt-android-compiler", version.ref = "hilt" }
