upgrade to alpha release of room

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,7 +11,7 @@ navigation = "2.7.0-beta02"
 hilt = "2.46.1"
 androidx-hilt = "1.0.0"
 accompanist = "0.31.5-beta"
-room="2.5.2"
+room="2.6.0-alpha02"
 com-google-devtools="1.8.22-1.0.11"
 ktlint-gradle="11.4.2"
 compose-material-3= "1.2.0-alpha03"
