--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,10 +3,10 @@ agp = "8.1.0-rc01"
 compose-destinations = "1.9.50"
 kotlinx-datetime = "0.4.0"
 org-jetbrains-kotlin = "1.8.22"
-core-ktx = "1.11.0-beta02"
+core-ktx = "1.12.0-alpha05"
 junit-jupiter = "5.8.2"
 androidx-lifecycle = "2.6.1"
-activity-compose = "1.7.2"
+activity-compose = "1.8.0-alpha06"
 compose-bom = "2023.06.01"
 kotlin-serialization = "1.5.1"
 hilt = "2.46.1"
