--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.1.0-rc01"
+agp = "8.1.0"
 compose-destinations = "1.9.50"
 kotlinx-datetime = "0.4.0"
 org-jetbrains-kotlin = "1.9.0"
